--- a/estilos.css
+++ b/estilos.css
@@ -66,4 +66,28 @@ background-color: #fff;}
 
 
 
+/*entrada ampliada*/
+
+.fondoentrada{width: 100%; float: left; position: relative;
+background-image: url(imagenes/comunes/fondoentrada.jpg); background-repeat: repeat;}
+
+.contenidoentrada{width: 1024px; float: left; position: relative; left: 50%; margin-left: -512px;
+padding: 30px; background-color: #fff; margin-bottom: 65px; margin-top: 65px;}
+
+.volver{float: left; position: relative; width: 99px; background-color: #ed5d1b;
+font-family: 'Kalam', cursive; font-size: 2rem; font-weight: 700; color: #fff; -webkit-box-shadow: 1px 1px 10px 8px #b2b52b;
+text-decoration: none; padding-left: 18px;
+box-shadow: 1px 1px 10px 8px #b2b52b; border: none; border-radius: 0% 50% 50% 50%; margin-left: -55px; margin-top: -44px;
+text-shadow: 3px 3px 5px #b2b52b; padding-top: 8px; cursor: pointer;}
+
+.volver:hover{background-color: #b2b52b; text-shadow: 3px 3px 5px #ed5d1b;
+-webkit-box-shadow: 1px 1px 10px 8px #ed5d1b;
+box-shadow: 1px 1px 10px 8px #ed5d1b;}
+
+
+
+
+
+
+
 
