--- a/estilosadministrador.css
+++ b/estilosadministrador.css
@@ -22,13 +22,24 @@ background-position: center; background-size: contain;}
 .contenido{width: 1024px; float: left; position: relative; left: 50%; margin-left: -512px;
 padding-top: 30px; padding-bottom: 30px;}
 
+.titular{float: left; position: relative; width: 90%; height: 77px; font-family: 'Kalam', cursive; font-size: 3.5rem;
+font-weight: 700; text-transform: uppercase; text-align: center; color: #fff; margin: 0px; background-color: #ed5b1d;
+box-shadow: 1px 1px 10px 8px #ed5b1d; margin-bottom: -9px;}
+
 .entrada{float: left; position: relative; background-color: #fff; width: 800px; height: 300px; margin-left: 112px;
 margin-bottom: 50px; margin-top: 50px; -webkit-box-shadow: 1px 1px 10px 8px #ed5b1d; box-shadow: 1px 1px 10px 8px #ed5b1d;}
 /*margin: 50px; 0px; 50px*/
 
 .contenedorimagen{float: left; position: relative; border-right: solid 2px #ed5b1d; width: 280px; height: 300px;}
 
-.imagen{position: absolute; width: 100%; height: 100%; object-fit: contain; overflow: hidden; margin: 0px;}
+.imagen{float: left; position: relative; width: 100%; height: 100%; object-fit: contain; overflow: hidden;
+margin: 0px; margin-left: -3px; margin-top: 6px;}
+
+.descripcion{float: left; position: relative; width: 92%; height: 28px; font-family: 'Kalam', cursive; font-size: 1.1rem;
+font-weight: 300; margin-left: 8px; margin-top: -266px;}
+
+.examinar{float: left; position: relative; width: 96%; height: 37px; margin-left: 7px; margin-top: -210px;
+ font-family: 'Kalam', cursive; font-size: 0.72rem; font-weight: 300;}
 
 .informacion{float: left; position: relative; width: 469px; height: 300px; padding-left: 22px; padding-right: 20px;}
 
@@ -36,23 +47,23 @@ margin-bottom: 50px; margin-top: 50px; -webkit-box-shadow: 1px 1px 10px 8px #ed5
 margin-top: 7px; margin-bottom: 0px;}
 
 .titulo{float: left; position: relative; width: 468px; height: 52px; overflow: hidden;font-family: 'Kalam', cursive;
-font-size: 1.5rem; font-weight: 700; text-transform: uppercase; text-align: left; color: #ee5b1e; line-height: 1.8rem;
+font-size: 1.5rem; font-weight: 700; text-transform: uppercase; text-align: left; color: #ed5d1b; line-height: 1.8rem;
 margin-bottom: 0px; margin-top: 5px;}
 
-.texto{float: left; position: relative; width: 474px; height: 172px; font-family: 'Kalam', cursive; font-size: 1.1rem;
+.texto{float: left; position: relative; width: 474px; height: 128px; font-family: 'Kalam', cursive; font-size: 1.1rem;
 font-weight: 300; text-align: justify; overflow: hidden; margin-top: 8px;}
 
 .boton{float: right; position: relative; width: 101px; height: 97px; background-color: #ed5d1b;
 font-family: 'Kalam', cursive; font-size: 1.1rem; font-weight: 700; color: #fff; -webkit-box-shadow: 1px 1px 10px 8px #b2b52b;
 box-shadow: 1px 1px 10px 8px #b2b52b; border: none; border-radius: 50% 50% 0% 50%; margin-right: -49px;
-text-shadow: 3px 3px 5px #b2b52b; padding-top: 8px; cursor: pointer;}
+text-shadow: 3px 3px 5px #b2b52b; margin-top: -33px; cursor: pointer;}
 
 .boton:hover{background-color: #b2b52b; text-shadow: 3px 3px 5px #ed5d1b;
 -webkit-box-shadow: 1px 1px 10px 8px #ed5d1b;
 box-shadow: 1px 1px 10px 8px #ed5d1b;}
 
-.leer{ margin-top: -68px;}
 
+.publ{padding-top: 8px; }
 
 
 /*pie*/
